# neoshare

./: Cargo.toml  flake.nix
.cargo/: config.toml
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: lib.rs
