[workspace]
resolver = "2"
members = ["crates/plugin", "crates/protocol", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
yrs = "0.22.0"
neoshare-protocol = { path = "crates/protocol", version = "0.1.0" }
uuid = { version = "1.12.1", features = ["v4"] }
serde_json = "1.0.138"

[workspace.metadata.crane]
name = "neoshare"
