[package]
name = "neoshare-plugin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "neoshare"

[dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev = "a72ad383392c151af8de074c3475276cf5265cf7", features = [
  "neovim-nightly",
] }
yrs.workspace = true
neoshare-protocol.workspace = true
tungstenite = "0.26.1"
semaphore = "0.4.0"
uuid.workspace = true
serde_json.workspace = true
