[package]
name = "neoshare-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neoshare-server"
path = "src/main.rs"

[dependencies]
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
warp = "0.3.7"
yrs = "0.22.0"
