[package]
name = "neoshare-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neoshare-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
serde_json.workspace = true
uuid.workspace = true
warp = "0.3.7"
yrs.workspace = true
neoshare-protocol.workspace = true
